--- a/openvidu-testapp/src/index.html
+++ b/openvidu-testapp/src/index.html
@@ -14,6 +14,10 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
     crossorigin="anonymous"></script>
 
+  <script>
+    window.myEvents = '';
+  </script>
+
 </head>
 
 <body>
