openvidu-test-e2e extended to 7 scenarios. Active MediaTracks checked

--- a/openvidu-testapp/src/index.html
+++ b/openvidu-testapp/src/index.html
@@ -14,7 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
     crossorigin="anonymous"></script>
 
-  <script>
+  <script type="text/javascript">
     window.myEvents = '';
   </script>
 
