openvidu-server dashboard updated to new angular-material 5

--- a/openvidu-server/src/main/resources/static/index.html
+++ b/openvidu-server/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <app-root>
-    <md-spinner></md-spinner>
+    <mat-spinner></mat-spinner>
   </app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
