--- a/openvidu-server/src/main/resources/static/index.html
+++ b/openvidu-server/src/main/resources/static/index.html
@@ -12,12 +12,12 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
-</head>
+<link rel="stylesheet" href="styles.3aeb2b08ae81545ecaf9.css"></head>
 
 <body>
   <app-root>
     <mat-spinner></mat-spinner>
   </app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.3582350dd6075fd34141.js"></script><script type="text/javascript" src="main.e4ef2b4aa5c302f2916e.js"></script></body>
 
 </html>
