--- a/openvidu-server/src/main/resources/static/index.html
+++ b/openvidu-server/src/main/resources/static/index.html
@@ -12,12 +12,12 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
-</head>
+<link rel="stylesheet" href="styles.0918eeab8c842f3404f7.css"></head>
 
 <body>
   <app-root>
     <mat-spinner></mat-spinner>
   </app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.3582350dd6075fd34141.js"></script><script type="text/javascript" src="main.00780dfe2f8480c954bc.js"></script></body>
 
 </html>
