Update to version v2.11.0

--- a/openvidu-server/src/main/resources/static/index.html
+++ b/openvidu-server/src/main/resources/static/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.b2f04bfc16e71baefaee.css"></head>
+<link rel="stylesheet" href="styles.7d15dae4c3615fa76e0d.css"></head>
 
 <body>
   <app-root>
     <mat-spinner></mat-spinner>
   </app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.ce99a1000137fc7c463e.js"></script><script type="text/javascript" src="main.6c0f8ea895058a2e6299.js"></script></body>
+<script src="runtime.741402d1d47331ce975c.js"></script><script src="polyfills-es5.613d1909ec381c0aefb7.js" nomodule></script><script src="polyfills.568c7647be614ffce09e.js"></script><script src="main.ebea14012e0072bc1695.js"></script></body>
 
 </html>
