Review all href usages of target="_blank"
Do not force the user's browser to open new tabs when navigating within
the documentation pages. We discussed about this and agreed that doing
so is user hostile and goes away from how HTTP links have been working
for 30 years (i.e. leave users decide if THEY want a new tab or not, by
how they open the links).

Used these regexes:

From: target="blank"
To: target="_blank"

From: (\]\((?!http)[^)]+\))\{:target="_blank"\}
To: $1

From: (\]\(https?://docs.openvidu.io[^)]+\))\{:target="_blank"\}
To: $1

From: href="((?!http)\S+)" target="_blank"
To: href="$1"

From: href="(https?://docs.openvidu.io\S+)" target="_blank"
To: href="$1"

--- a/openvidu-server/src/main/resources/static/index.html
+++ b/openvidu-server/src/main/resources/static/index.html
@@ -7,12 +7,15 @@
 <body>
 	<h1>Welcome to OpenVidu</h1>
 	<ul>
-		<li><strong>OpenVidu Server URL: </strong><span id="rest-api-url"></span>
-			<small>(consume <a
-				href="https://docs.openvidu.io/en/stable/reference-docs/REST-API/"
-				target="_blank">REST API</a> in this URL)
-		</small></li>
-		<li><strong>OpenVidu Dashboard: </strong><span id="dashboard-url"></span></li>
+		<li>
+			<strong>OpenVidu Server URL: </strong><span id="rest-api-url"></span>
+			<small>
+				(consume <a href="https://docs.openvidu.io/en/stable/reference-docs/REST-API/" target="_blank">REST API</a> in this URL)
+			</small>
+		</li>
+		<li>
+			<strong>OpenVidu Dashboard: </strong><span id="dashboard-url"></span>
+		</li>
 	</ul>
 </body>
 <script>
