openvidu-components: Updated css variable names

--- a/openvidu-components-angular/e2e/webcomponent-app/index.html
+++ b/openvidu-components-angular/e2e/webcomponent-app/index.html
@@ -17,7 +17,7 @@
 			:root {
 				--ov-primary-color: #303030;
 				--ov-secondary-color: #3e3f3f;
-				--ov-secondary-light-color: #e6e6e6;
+				--ov-light-color: #e6e6e6;
 				--ov-tertiary-color: #598eff;
 				--ov-warn-color: #eb5144;
 				--ov-accent-color: #ffae35;
