openvidu-components: Updated e2e test

--- a/openvidu-components-angular/e2e/webcomponent-app/index.html
+++ b/openvidu-components-angular/e2e/webcomponent-app/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>openvidu-web-component</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.min.js"
 			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -17,11 +16,12 @@
 			:root {
 				--ov-primary-color: #303030;
 				--ov-secondary-color: #3e3f3f;
-				--ov-light-color: #e6e6e6;
 				--ov-tertiary-color: #598eff;
 				--ov-warn-color: #eb5144;
 				--ov-accent-color: #ffae35;
+				--ov-light-color: #e6e6e6;
 
+				--ov-logo-background-color: #3a3d3d;
 				--ov-text-color: #ffffff;
 
 				--ov-panel-text-color: #1d1d1d;
