openvidu-components: Added replace track e2e tests

--- a/openvidu-components-angular/e2e/webcomponent-app/index.html
+++ b/openvidu-components-angular/e2e/webcomponent-app/index.html
@@ -8,7 +8,10 @@
 			crossorigin="anonymous"
 		></script>
 
-		<script src="app.js"></script>
+		<script type="module" src="utils/filter-stream.js"></script>
+		<script type="module" src="utils/shader-renderer.js"></script>
+		<script type="module" src="utils/media-devices.js"></script>
+		<script type="module" src="app.js"></script>
 		<script src="openvidu-webcomponent-dev.js"></script>
 		<link rel="stylesheet" href="openvidu-webcomponent-dev.css" />
 
