ov-components: Updated css color variables

--- a/openvidu-components-angular/e2e/webcomponent-app/index.html
+++ b/openvidu-components-angular/e2e/webcomponent-app/index.html
@@ -11,23 +11,23 @@
 
 		<style>
 			:root {
-				--ov-primary-color: #303030;
-				--ov-secondary-color: #3e3f3f;
-				--ov-tertiary-color: #598eff;
-				--ov-warn-color: #eb5144;
-				--ov-accent-color: #ffae35;
+				--ov-background-color: #303030;
+				--ov-secondary-action-color: #3e3f3f;
+				--ov-accent-action-color: #598eff;
+				--ov-error-color: #eb5144;
+				--ov-accent-action-color: #ffae35;
 				--ov-light-color: #e6e6e6;
 
-				--ov-logo-background-color: #3a3d3d;
-				--ov-text-color: #ffffff;
+				--ov-secondary-action-color: #3a3d3d;
+				--ov-text-primary-color: #ffffff;
 
-				--ov-panel-text-color: #1d1d1d;
-				--ov-panel-background: #ffffff;
+				--ov-text-primary-color: #1d1d1d;
+				--ov-surface-color: #ffffff;
 
 				--ov-buttons-radius: 50%;
 				--ov-leave-button-radius: 10px;
 				--ov-video-radius: 5px;
-				--ov-panel-radius: 5px;
+				--ov-surface-radius: 5px;
 			}
 		</style>
 	</head>
