ov-components: Updated css variable names

--- a/openvidu-components-angular/e2e/webcomponent-app/index.html
+++ b/openvidu-components-angular/e2e/webcomponent-app/index.html
@@ -24,7 +24,7 @@
 				--ov-text-primary-color: #1d1d1d;
 				--ov-surface-color: #ffffff;
 
-				--ov-buttons-radius: 50%;
+				--ov-toolbar-buttons-radius: 50%;
 				--ov-leave-button-radius: 10px;
 				--ov-video-radius: 5px;
 				--ov-surface-radius: 5px;
